--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       env:
         VITE_FB_API_KEY: ${{ secrets.VITE_FB_API_KEY }}
         VITE_FB_APP_ID: ${{ secrets.VITE_FB_APP_ID }}
-        VITE_FB_AUTH_DOMAIN: ${{ secrects.VITE_FB_AUTH_DOMAIN }}
+        VITE_FB_AUTH_DOMAIN: ${{ secrets.VITE_FB_AUTH_DOMAIN }}
         VITE_FB_MEASUREMENT_ID: ${{ secrets.VITE_FB_MEASUREMENT_ID }}
         VITE_FB_MESSAGING_SENDER_ID: ${{ secrets.VITE_FB_MESSAGING_SENDER_ID }}
         VITE_FB_PROJECT_ID: ${{ secrets.VITE_FB_PROJECT_ID }}
